--- a/views/contact.html
+++ b/views/contact.html
@@ -13,12 +13,12 @@
             <ul class="main-header__item-list"> 
                 <li class="main-header__item"><a href="/shop">Shop</a></li>
                 <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
-                <li class="main-header__item"><a href="/contact">Contact Us</li>
+                <li class="main-header__item"><a href="/contact">Contact Us</a>npm</li>
             </ul>
         </nav>
     </header>
     <main>
-        <form action="/contact" method="POST">
+        <form action="/success" method="POST">
             <label>Name</label>
             <input type="text" name="name">
             <label>Email</label>
